[project]
name = "claude-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Serafin",email = "francesco.serafin.phd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic (>=0.88.0,<0.89.0)",
    "python-dotenv (>=1.2.2, <1.2.3)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
